--- a/views/blogs-all.handlebars
+++ b/views/blogs-all.handlebars
@@ -1,6 +1,23 @@
 <div class="container" id="blog-all">
     <div class="container" id="blogs">
-        <h2 class="title is-2">All Posts</h2>
+
+        {{#if (eq pet_category "Cats")}}
+        {{#if (eq post_type "Advice")}}
+        <h2 class="title is-2">Cat Advice</h2>
+        {{else if (eq post_type "Funny")}}
+        <h2 class="title is-2">Funny Cats</h2>
+        {{else if (eq post_type "all")}}
+        <h2 class="title is-2">All Cat Posts</h2>
+        {{/if}}
+        {{else}}
+        {{#if (eq post_type "Advice")}}
+        <h2 class="title is-2">Dog Advice</h2>
+        {{else if (eq post_type "Funny")}}
+        <h2 class="title is-2">Funny Dogs</h2>
+        {{else if (eq post_type "all")}}
+        <h2 class="title is-2">All Dog Posts</h2>
+        {{/if}}
+        {{/if}}
 
         {{#each blogPosts as |post| }}
         <div class="container">
@@ -8,7 +25,7 @@
                 <div class="card blog-post">
                     <img src="{{image_url}}" alt="blog image" />
                     <div class="card-content">
-                        <h4 class="is-size-7">{{updatedAt}}</h4>
+                        <h4 class="is-size-7">{{format_date updatedAt}}</h4>
                         <h2 class="is-size-4">{{title}}</h2>
 
                         <h3 class="is-size-5">{{User.username}}</h3>
@@ -16,6 +33,11 @@
                         <h4 class="is-size-6">Type: {{post_type}}</h4>
                         <h4 class="is-size-6">Number of Comments: {{commentsLength}}</h4>
                     </div>
+                    <button href="/blogs/{{id}}"class="button is-small is-info view-blog " data-blog-id="{{id}}">View</button>
+                        <button class="button is-small is-danger delete-blog is-hidden" data-blog-id="{{id}}"
+                            data-blog-owner="{{User.id}}">Delete</button>
+                    
+
                 </div>
             </a>
         </div>
@@ -23,7 +45,7 @@
     </div>
 
     <div class="container" id="blog-create">
-        <h2 id="user-id" data-user-id="{{user_id}}" class="title is-2">Make a post!</h2>
+        <h2 class="title is-2" id="user-id" data-user-id="{{own_user_id}}">Make a post!</h2>
         <form class="post-form">
             <div class="field">
                 <label class="label" for="new-title">Title:</label>
@@ -41,8 +63,13 @@
                 <label class="label" for="new-category">Pet Category:</label>
                 <div class="select" id="new-category">
                     <select>
+                        {{#isEqual pet_category "===" "Dogs"}}
+                        <option selected>Dogs</option>
                         <option>Cats</option>
+                        {{else}}
                         <option>Dogs</option>
+                        <option selected>Cats</option>
+                        {{/isEqual}}
                     </select>
                 </div>
             </div>
@@ -50,8 +77,13 @@
                 <label class="label" for="new-type">Post Type:</label>
                 <div class="select" id="new-type">
                     <select>
+                        {{#isEqual post_type "===" "Funny"}}
+                        <option selected>Funny</option>
                         <option>Advice</option>
+                        {{else}}
                         <option>Funny</option>
+                        <option selected>Advice</option>
+                        {{/isEqual}}
                     </select>
                 </div>
             </div>
