--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -77,7 +77,7 @@
 
         {{#if logged_in}}
         <div class="buttons">
-          <a id="logout" href="/logout" class="button is-primary">
+          <a id="logout" href="/logout" class="button is-primary" data-user-id="{{user_id}}">
             Log out
           </a>
         </div>
