--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -22,7 +22,6 @@ body {
 
 .footer {
   left: 0;
-  bottom: 0;
   width: 100%;
   max-height: 20px;
 }
@@ -50,4 +49,15 @@ body {
     padding: 20px;
     z-index: 1;
   }
+
+/* #petLinks {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    margin-bottom: 10px;
+    padding: 10px 20px;
+    font-size: 18px;
+  } */
+
   
