--- a/views/petsCard.handlebars
+++ b/views/petsCard.handlebars
@@ -1,6 +1,8 @@
 <div class="container is-flex is-flex-direction-column is-justify-content-between" style="min-height: 100vh;">
   <div class="columns">
     <div class="column is-three-quarters" style="padding-top: 20px;">
+      <!-- pet id container to store pet id to retrieve -->
+      <div id="petIdContainer" data-pet-id="{{pets.id}}"></div>
       <div class="container has-text-centered">
         <div class="card">
           <div class="card-content">
@@ -58,6 +60,7 @@
           </div>
         </div>
         <a href="http://localhost:8080/pets" class="button is-info is-large" style="margin-top: 10px;">Back</a>
+        <a href="http://localhost:8080/pets/edit/{{pets.id}}" class="button is-primary is-large" style="margin-top: 10px;">Edit</a>
       </div>
     </div>
     <div class="column" style="padding-top: 20px;">
