make our logo and placeholders transparent

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -15,7 +15,7 @@
     <div class="columns">
       <div class="column">
         <div class="card">
-          <div class="card-content">
+          <div class="card-content" background>
             <p class="title">
               Blog Post
             </p>
