added new logo photo if we want to change, updated some styling

--- a/views/ownerPets.handlebars
+++ b/views/ownerPets.handlebars
@@ -2,7 +2,7 @@
   <div id="petList" class="columns is-multiline">
     {{#each pets as |pet|}}
       <div class="column is-4">
-        <div class="card">
+        <div class="card my-4 py-4 is-flex-grow-1">
           <div class="card-image">
             <figure class="image is-4by3">
               {{#if pet.pet_image_url}}
