--- a/views/petsCard.handlebars
+++ b/views/petsCard.handlebars
@@ -19,8 +19,8 @@
                 </figure>
               </div>
               <div class="media-content">
-                <p class="title is-4">{{pets.pet_name}}</p>
-                <p class="subtitle is-6">{{pets.pet_breed}}</p>
+                <p class="title is-4" id="petCardName">{{pets.pet_name}}</p>
+                <p class="subtitle is-6" id="petCardName">{{pets.pet_breed}}</p>
               </div>
             </div>
             <div class="content">
