--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -22,7 +22,7 @@
                 Pet of the Day
               </p>
 
-              <div class="card">
+              {{!-- <div class="card"> --}}
                 <div class="card-image">
                   <figure class="image is-4by3">
                     <img id="home-pet-img" src="{{randomPet.pet_image_url}}" alt="Card image">
@@ -39,7 +39,7 @@
                     <small class="has-text-grey">{{randomPet.updatedAt}}</small>
                   </div> --}}
                 </div>
-              </div>
+              {{!-- </div> --}}
             </a>
           </div>
 
