added placeholder graph for future dev, updated navbar to be larger and font

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -184,3 +184,12 @@ a {
   font-size: larger;
 
 }
+.navbar-menu{
+  font-family: 'Nunito', sans-serif;
+  font-weight: bold;
+}
+#navBarBanner {
+  height: 80px;
+  width: 100%;
+  margin-bottom: 20px;
+}
