--- a/views/petsCard.handlebars
+++ b/views/petsCard.handlebars
@@ -67,8 +67,7 @@
       <div class="card">
         <div class="card-content">
           <div class="media">
-            <div class="media-left">
-            </div>
+            <div class="media-left"></div>
             <div class="media-content">
               <p class="title is-4">Links and Location</p>
             </div>
@@ -82,4 +81,16 @@
       </div>
     </div>
   </div>
-</div>
+  <!-- Placeholder Card -->
+  <div class="columns">
+    <div class="column is-full" style="padding-top: 50px; padding-bottom: 30px;">
+      <div class="card">
+        <div class="card-content has-text-centered">
+          <p class="title is-4">COMING SOON</p>
+        </div>
+        <figure class="image is-3by1">
+        <img src="/img/placeholder_graph.png" alt="Placeholder graph Image">
+        </figure>
+      </div>
+    </div>
+  </div>
