--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -8,8 +8,11 @@
   <link rel="stylesheet" type="text/css" href="/styles/reset.css">
   <link rel="stylesheet" type="text/css" href="/styles/style.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300&display=swap" rel="stylesheet">
 </head>
-<nav class="navbar has-background-warning" role="navigation" aria-label="main navigation">
+<nav class="navbar has-background-warning" role="navigation" aria-label="main navigation" id="navBarBanner">
   <div class="navbar-brand">
     <a class="navbar-item" href="http://localhost:8080/pets">
       {{!-- logo image --}}
