--- a/views/petsCard.handlebars
+++ b/views/petsCard.handlebars
@@ -1,4 +1,4 @@
-<div class="container is-flex is-flex-direction-column is-justify-content-between" style="min-height: 100vh;">
+<div id="petCard-page" class="container is-flex is-flex-direction-column is-justify-content-between" style="min-height: 100vh;">
   <div class="columns">
     <div class="column is-three-quarters" style="padding-top: 20px;">
       <!-- pet id container to store pet id to retrieve -->
@@ -39,13 +39,13 @@
                   <p><strong>Allergies:</strong></p>
                   <p>{{pets.pet_allergies}}</p>
                   <p><strong>Medications:</strong></p>
-                  <p>{{pets.pet_medications}}</p>
+                  <p>{{pets.pet_medication}}</p>
                 </div>
               </div>
               <div class="columns">
                 <div class="column is-one-third">
                   <p><strong>Exercise:</strong></p>
-                  <p>{{pets.pet_exercise}}</p>
+                  <p>{{pets.pet_excercise}}</p>
                 </div>
                 <div class="column is-one-third">
                   <p><strong>Food:</strong></p>
