--- a/views/petsCard.handlebars
+++ b/views/petsCard.handlebars
@@ -69,12 +69,15 @@
           <div class="media">
             <div class="media-left"></div>
             <div class="media-content">
-              <p class="title is-4">Links and Location</p>
+              <p class="title is-4 is-centered">Links and Location</p>
             </div>
           </div>
           <div class="content">
-            <div class="buttons is-rounded is-large is-centered is-flex-direction-column" id="petLinks">
+            <div class="buttons" id="petLinks">
               {{{generateLinks pets.pet_type}}}
+            </div>
+            <div class="media-content">
+              <p class="title is-6" id="Veterinarians"></p>
             </div>
           </div>
         </div>
