--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -190,11 +190,16 @@ a {
 
 }
 .navbar-menu{
-  font-family: 'Nunito', sans-serif;
   font-weight: bold;
 }
 #navBarBanner {
   height: 80px;
   width: 100%;
   margin-bottom: 20px;
+}
+
+p, button, a, label,
+h1, h2, h3, h4, h5, h6,
+.card, .hero-body, .navbar-menu {
+  font-family: 'Nunito', sans-serif;
 }
