--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -206,3 +206,19 @@ h1, h2, h3, h4, h5, h6,
 #Veterinarians {
   text-align: center;
 }
+
+#petCardButtons {
+  align-items: center;
+  padding: 20px;
+  margin-top: 20px;
+  font-family: 'Nunito', sans-serif;
+}
+#petName{
+  font-size: 1.5rem;
+  font-weight: bold;
+  padding-right: 140px;
+}
+#petDescription{
+  font-size: 1.0rem;
+  padding-right: 140px;
+}
