--- a/views/blogs-all.handlebars
+++ b/views/blogs-all.handlebars
@@ -27,9 +27,9 @@
                         <img src="{{image_url}}" alt="blog image" />
                         <div class="card-content">
                             <h4 class="is-size-7">{{format_date updatedAt}}</h4>
-                            <h2 class="is-size-4">{{title}}</h2>
+                            <h2 class="is-size-3 has-text-weight-bold">{{title}}</h2>
 
-                            <h3 class="is-size-5">{{User.username}}</h3>
+                            <h3 class="is-size-5 has-text-weight-light has-text-success is-underlined">{{User.username}}</h3>
                             <h4 class="is-size-6">Category: {{pet_category}}</h4>
                             <h4 class="is-size-6">Type: {{post_type}}</h4>
                             <h4 class="is-size-6">Number of Comments: {{commentsLength}}</h4>
