--- a/views/ownerPets.handlebars
+++ b/views/ownerPets.handlebars
@@ -38,7 +38,7 @@
         <div class="card">
           <div class="card-content">
             <h5 class="title is-5">No Pets</h5>
-            <p class="subtitle is-6">You have no pets. <a href="/login">Add a pet</a> to get started.</p>
+            <p class="subtitle is-6">You have no pets. <a href="/Add-A-Pet">Add a pet</a> to get started.</p>
           </div>
         </div>
       </div>
