--- a/views/blog-one.handlebars
+++ b/views/blog-one.handlebars
@@ -24,7 +24,7 @@
                 <div class="column">
                     <div id="delete-blog" data-user-id="{{user_id}}">
                         {{!-- <button class="button is-small is-link">Edit</button> --}}
-                        <button class="button is-small is-danger">Delete</button>
+                        <button class="button is-small is-danger blog-delete">Delete</button>
                     </div>
 
                 </div>
