--- a/views/blogs-all.handlebars
+++ b/views/blogs-all.handlebars
@@ -45,9 +45,9 @@
                             </h4>
                         </div>
                     </div>
-                    <button href="/blogs/{{id}}" class="button is-small is-info view-blog p-auto"
+                    <button href="/blogs/{{id}}" class="button is-small is-info view-blog blog-view"
                         data-blog-id="{{id}}">View</button>
-                    <button class="button is-small is-danger delete-blog is-hidden" data-blog-id="{{id}}"
+                    <button class="button is-small is-danger delete-blog is-hidden blog-delete" data-blog-id="{{id}}"
                         data-blog-owner="{{User.id}}">Delete</button>
 
 
